--- a/BigMarket-trigger/pom.xml
+++ b/BigMarket-trigger/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.example</groupId>
             <artifactId>BigMarket-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>BigMarket-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
