--- a/docs/dev-ops/docker-compose-environment.yml
+++ b/docs/dev-ops/docker-compose-environment.yml
@@ -2,12 +2,12 @@
 version: '3.9'
 services:
   mysql:
-    image: mysql:8.0.32
+    image: mysql:5.7
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      TZ: Asia/Shanghai
+      TZ: Asia/Singapore
       MYSQL_ROOT_PASSWORD: 123456
     networks:
       - my-network
