--- a/BigMarket-app/pom.xml
+++ b/BigMarket-app/pom.xml
@@ -92,6 +92,16 @@
             <groupId>org.example</groupId>
             <artifactId>BigMarket-infrastructure</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cn.bugstack.middleware/db-router-spring-boot-starter -->
+        <dependency>
+            <groupId>cn.bugstack.middleware</groupId>
+            <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
