--- a/BigMarket-infrastructure/pom.xml
+++ b/BigMarket-infrastructure/pom.xml
@@ -22,16 +22,21 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
-        <!-- 系统模块 -->
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>BigMarket-domain</artifactId>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/cn.bugstack.middleware/db-router-spring-boot-starter -->
         <dependency>
             <groupId>cn.bugstack.middleware</groupId>
             <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <!-- 系统模块 -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>BigMarket-domain</artifactId>
         </dependency>
 
     </dependencies>
