--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
                 <artifactId>easy-random-core</artifactId>
                 <version>4.3.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>3.2.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
