18/09/2024 (complete user sign in rebate design)

--- a/BigMarket-app/src/main/resources/application-dev.yml
+++ b/BigMarket-app/src/main/resources/application-dev.yml
@@ -27,6 +27,7 @@ spring:
     topic:
       activity_sku_stock_zero: activity_sku_stock_zero
       send_award: send_award
+      send_rebate: send_rebate
 
 
 # 线程池配置
