22/09/2024 (enhance strategy rule chain design, always go to default chain node)

--- a/BigMarket-app/src/main/resources/application-dev.yml
+++ b/BigMarket-app/src/main/resources/application-dev.yml
@@ -24,6 +24,13 @@ spring:
     listener:
       simple:
         prefetch: 1 # 每次投递n个消息，消费完在投递n个
+        # 重试机制
+        retry:
+          enabled: true #是否开启消费者重试
+          max-attempts: 5 #最大重试次数
+          initial-interval: 5000ms #重试间隔时间（单位毫秒）
+          max-interval: 1200ms #重试最大时间间隔（单位毫秒）
+          multiplier: 2 #间隔时间乘子，间隔时间*乘子=下一次的间隔时间，最大不能超过设置的最大间隔时间
     topic:
       activity_sku_stock_zero: activity_sku_stock_zero
       send_award: send_award
