--- a/BigMarket-app/src/main/resources/application-dev.yml
+++ b/BigMarket-app/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ spring:
       activity_sku_stock_zero: activity_sku_stock_zero
       send_award: send_award
       send_rebate: send_rebate
+      update_point_success: update_point_success
 
 
 # 线程池配置
