--- a/BigMarket-app/src/main/resources/application-prod.yml
+++ b/BigMarket-app/src/main/resources/application-prod.yml
@@ -1,5 +1,42 @@
 server:
   port: 8091
+  tomcat:
+    threads:
+      max: 200
+      min-spare: 50
+    accept-count: 10
+
+# application configuration
+app:
+  config:
+    # version control
+    api-version: v1
+    # cross-origin, can set to '*' in development
+    cross-origin: '*'
+
+# Spring 配置；rabbitmq
+spring:
+  rabbitmq:
+    addresses: 8.219.99.73
+    port: 5672
+    username: admin
+    password: admin
+    listener:
+      simple:
+        prefetch: 1 # 每次投递n个消息，消费完在投递n个
+        # 重试机制
+        retry:
+          enabled: true #是否开启消费者重试
+          max-attempts: 5 #最大重试次数
+          initial-interval: 5000ms #重试间隔时间（单位毫秒）
+          max-interval: 1200ms #重试最大时间间隔（单位毫秒）
+          multiplier: 2 #间隔时间乘子，间隔时间*乘子=下一次的间隔时间，最大不能超过设置的最大间隔时间
+    topic:
+      activity_sku_stock_zero: activity_sku_stock_zero
+      send_award: send_award
+      send_rebate: send_rebate
+      update_point_success: update_point_success
+
 
 # 线程池配置
 thread:
@@ -11,14 +48,14 @@ thread:
         keep-alive-time: 5000
         block-queue-size: 5000
         policy: CallerRunsPolicy
-
-# 数据库配置
+# ================================================ for single database ========================================================
+# 数据库配置；启动时配置数据库资源信息
 #spring:
 #  datasource:
 #    username: root
 #    password: 123456
-#    url: jdbc:mysql://127.0.0.1:3306/xfg_frame_archetype?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=true
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/big-market?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
+#    driver-class-name: com.mysql.jdbc.Driver
 #  hikari:
 #    pool-name: Retail_HikariCP
 #    minimum-idle: 15 #最小空闲连接数量
@@ -30,9 +67,86 @@ thread:
 #    connection-test-query: SELECT 1
 #  type: com.zaxxer.hikari.HikariDataSource
 
-#mybatis:
-#  mapper-locations: classpath:/mybatis/mapper/*.xml
-#  config-location:  classpath:/mybatis/config/mybatis-config.xml
+# 多数据源路由配置，库数量 * 表数量 为2的次幂，如2库4表
+# mysql 5.x 配置 driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
+# mysql 8.x 配置 driver-class-name: com.mysql.cj.jdbc.Driver mysql-connector-java 8.0.22
+# ================================================ for single database ========================================================
+
+# 数据库配置；启动时配置数据库资源信息 (分库分表)
+mini-db-router:
+  jdbc:
+    datasource:
+      dbCount: 2
+      tbCount: 4
+      default: db00
+      routerKey: userId
+      list: db01,db02
+      db00:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://8.219.99.73:3306/big-market?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
+        username: root
+        password: 13860433455Wabb
+        type-class-name: com.zaxxer.hikari.HikariDataSource
+        pool:
+          pool-name: Retail_HikariCP
+          minimum-idle: 15 #最小空闲连接数量
+          idle-timeout: 180000 #空闲连接存活最大时间，默认600000（10分钟）
+          maximum-pool-size: 25 #连接池最大连接数，默认是10
+          auto-commit: true  #此属性控制从池返回的连接的默认自动提交行为,默认值：true
+          max-lifetime: 1800000 #此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+          connection-timeout: 30000 #数据库连接超时时间,默认30秒，即30000
+          connection-test-query: SELECT 1
+      db01:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://8.219.99.73:3306/big-market-01?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
+        username: root
+        password: 13860433455Wabb
+        type-class-name: com.zaxxer.hikari.HikariDataSource
+        pool:
+          pool-name: Retail_HikariCP
+          minimum-idle: 15 #最小空闲连接数量
+          idle-timeout: 180000 #空闲连接存活最大时间，默认600000（10分钟）
+          maximum-pool-size: 25 #连接池最大连接数，默认是10
+          auto-commit: true  #此属性控制从池返回的连接的默认自动提交行为,默认值：true
+          max-lifetime: 1800000 #此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+          connection-timeout: 30000 #数据库连接超时时间,默认30秒，即30000
+          connection-test-query: SELECT 1
+      db02:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://8.219.99.73:3306/big-market-02?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
+        username: root
+        password: 13860433455Wabb
+        type-class-name: com.zaxxer.hikari.HikariDataSource
+        pool:
+          pool-name: Retail_HikariCP
+          minimum-idle: 15 #最小空闲连接数量
+          idle-timeout: 180000 #空闲连接存活最大时间，默认600000（10分钟）
+          maximum-pool-size: 25 #连接池最大连接数，默认是10
+          auto-commit: true  #此属性控制从池返回的连接的默认自动提交行为,默认值：true
+          max-lifetime: 1800000 #此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+          connection-timeout: 30000 #数据库连接超时时间,默认30秒，即30000
+          connection-test-query: SELECT 1
+
+
+# MyBatis 配置【如需使用记得打开】
+mybatis:
+  mapper-locations: classpath:/mybatis/mapper/*.xml
+  config-location:  classpath:/mybatis/config/mybatis-config.xml
+
+# Redis
+redis:
+  sdk:
+    config:
+      host: 8.219.99.73
+      port: 16379
+      pool-size: 10
+      min-idle-size: 5
+      idle-timeout: 30000
+      connect-timeout: 5000
+      retry-attempts: 3
+      retry-interval: 1000
+      ping-interval: 60000
+      keep-alive: true
 
 # 日志
 logging:
