04/10/2024 (switch to prod config)

--- a/BigMarket-app/src/main/resources/application-prod.yml
+++ b/BigMarket-app/src/main/resources/application-prod.yml
@@ -19,8 +19,8 @@ spring:
   rabbitmq:
     addresses: 8.219.99.73
     port: 5672
-    username: admin
-    password: admin
+    username: Linst
+    password: 13860433455Wabb
     listener:
       simple:
         prefetch: 1 # 每次投递n个消息，消费完在投递n个
