--- a/BigMarket-app/src/main/resources/application-prod.yml
+++ b/BigMarket-app/src/main/resources/application-prod.yml
@@ -21,6 +21,8 @@ spring:
     port: 5672
     username: Linst
     password: 13860433455Wabb
+    template:
+      declare-exchange: true
     listener:
       simple:
         prefetch: 1 # 每次投递n个消息，消费完在投递n个
