--- a/BigMarket-app/pom.xml
+++ b/BigMarket-app/pom.xml
@@ -105,6 +105,20 @@
             <groupId>org.example</groupId>
             <artifactId>BigMarket-infrastructure</artifactId>
         </dependency>
+
+        <!--dubbo + nacos-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
