--- a/docs/dev-ops/docker-compose-environment.yml
+++ b/docs/dev-ops/docker-compose-environment.yml
@@ -1,6 +1,34 @@
 # 命令执行 docker-compose -f docker-compose-environment.yml up -d
 version: '3.9'
 services:
+  # 注册中心 https://github.com/nacos-group/nacos-docker - 其他配置可参考(集群)
+  # http://127.0.0.1:8848/nacos 【账号：nacos 密码：nacos】
+  nacos:
+    image: nacos/nacos-server:v2.2.3-slim
+    container_name: nacos
+    restart: always
+    ports:
+      - "8848:8848"
+      - "9848:9848"
+    environment:
+      - PREFER_HOST_MODE=hostname
+      - MODE=standalone
+      - SPRING_DATASOURCE_PLATFORM=mysql
+      - MYSQL_SERVICE_HOST=mysql
+      - MYSQL_SERVICE_DB_NAME=nacos-config
+      - MYSQL_SERVICE_PORT=3306
+      - MYSQL_SERVICE_USER=root
+      - MYSQL_SERVICE_PASSWORD=123456
+      - MYSQL_SERVICE_DB_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
+      - NACOS_AUTH_IDENTITY_KEY=2222
+      - NACOS_AUTH_IDENTITY_VALUE=2xxx
+      - NACOS_AUTH_TOKEN=SecretKey012345678901234567890123456789012345678901234567890123456789
+    networks:
+      - my-network
+    depends_on:
+      mysql:
+        condition: service_healthy
+
   mysql:
     image: mysql:5.7
     container_name: mysql
@@ -8,7 +36,7 @@ services:
     restart: always
     environment:
       TZ: Asia/Singapore
-      MYSQL_ROOT_PASSWORD: 13860433455Wabb
+      MYSQL_ROOT_PASSWORD: 123456
     networks:
       - my-network
     depends_on:
@@ -43,7 +71,7 @@ services:
     environment:
       - PMA_HOST=mysql
       - PMA_PORT=3306
-      - MYSQL_ROOT_PASSWORD=13860433455Wabb
+      - MYSQL_ROOT_PASSWORD=123456
     depends_on:
       mysql:
         condition: service_healthy
@@ -80,8 +108,8 @@ services:
       - 8081:8081
     environment:
       - REDIS_HOSTS=local:redis:6379
-      - HTTP_USER=Linst
-      - HTTP_PASSWORD=13860433455Wabb
+      - HTTP_USER=admin
+      - HTTP_PASSWORD=admin
       - LANG=C.UTF-8
       - LANGUAGE=C.UTF-8
       - LC_ALL=C.UTF-8
