--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,24 @@
                 <artifactId>spring-boot-starter-amqp</artifactId>
                 <version>3.2.0</version>
             </dependency>
+
+            <!--dubbo + nacos-->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>3.0.9</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>3.0.9</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>2.1.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
