18/10/2024: add Zoopkeer to dynamically control the activity(only degradeSwitch)

--- a/BigMarket-app/pom.xml
+++ b/BigMarket-app/pom.xml
@@ -119,6 +119,12 @@
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
         </dependency>
+
+        <!--zookeeper-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
