--- a/BigMarket-trigger/pom.xml
+++ b/BigMarket-trigger/pom.xml
@@ -66,6 +66,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-javanica</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
