24/10/2024: update sharding router dependency version

--- a/BigMarket-app/pom.xml
+++ b/BigMarket-app/pom.xml
@@ -84,7 +84,7 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/cn.bugstack.middleware/db-router-spring-boot-starter -->
         <dependency>
-            <groupId>cn.bugstack.middleware</groupId>
+            <groupId>plus.gaga.middleware</groupId>
             <artifactId>db-router-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
