--- a/BigMarket-trigger/pom.xml
+++ b/BigMarket-trigger/pom.xml
@@ -47,7 +47,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>cn.bugstack.middleware</groupId>
+            <groupId>plus.gaga.middleware</groupId>
             <artifactId>db-router-spring-boot-starter</artifactId>
         </dependency>
 
