--- a/BigMarket-app/src/main/resources/application-dev.yml
+++ b/BigMarket-app/src/main/resources/application-dev.yml
@@ -176,3 +176,14 @@ logging:
   level:
     root: info
   config: classpath:logback-spring.xml
+
+
+# 外部接口调用配置
+gateway:
+  config:
+    # 状态；true = 开启、false 关闭
+    enable: true
+    apiHost: http://127.0.0.1:8090
+    # big-market 大营销接口调用配置
+    big-market-appId: big-market
+    big-market-appToken: 6ec604541f8b1ce4a
