--- a/BigMarket-app/src/main/resources/application-prod.yml
+++ b/BigMarket-app/src/main/resources/application-prod.yml
@@ -85,7 +85,7 @@ mini-db-router:
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://8.219.99.73:3306/big-market?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
         username: root
-        password: 13860433455Wabb
+        password: 123456
         type-class-name: com.zaxxer.hikari.HikariDataSource
         pool:
           pool-name: Retail_HikariCP
@@ -100,7 +100,7 @@ mini-db-router:
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://8.219.99.73:3306/big-market-01?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
         username: root
-        password: 13860433455Wabb
+        password: 123456
         type-class-name: com.zaxxer.hikari.HikariDataSource
         pool:
           pool-name: Retail_HikariCP
@@ -115,7 +115,7 @@ mini-db-router:
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://8.219.99.73:3306/big-market-02?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&useSSL=false
         username: root
-        password: 13860433455Wabb
+        password: 123456
         type-class-name: com.zaxxer.hikari.HikariDataSource
         pool:
           pool-name: Retail_HikariCP
@@ -155,7 +155,7 @@ dubbo:
     version: 1.0
   registry:
     id: nacos-registry
-    address: nacos://127.0.0.1:8848
+    address: nacos://8.219.99.73:8848
   protocol:
     name: dubbo
     port: -1
@@ -165,7 +165,7 @@ dubbo:
 zookeeper:
   sdk:
     config:
-      connect-string: 127.0.0.1:2181
+      connect-string: 8.219.99.73:2181
       base-sleep-time-ms: 1000
       max-retries: 3
       session-timeout-ms: 18000
@@ -183,7 +183,7 @@ gateway:
   config:
     # 状态；true = 开启、false 关闭
     enable: true
-    apiHost: http://127.0.0.1:8090
+    apiHost: http://8.219.99.73:8090
     # big-market 大营销接口调用配置
     big-market-appId: big-market
     big-market-appToken: 6ec604541f8b1ce4a
